# Duellum

./: .gitignore  Duellum.spec  Makefile  README.md  build-steps.md  bullet.py  enemies.py  images.py  main.py  player.py  player_controls.py  pyproject.toml  pyvenv.cfg  requirements.txt  settings.py  upgrades.py
.github/workflows/: cicd.yml
docs/: index.html
website/: index.html
